--- a/index.html
+++ b/index.html
@@ -58,23 +58,17 @@
           </div>
         </div>
       </div>
-      <div id="page3" data-scroll data-scroll-speed="-2" class="w-100 h-100">
+      <div id="page3" class="w-100 h-100">
         <p class="txt-22">
           CERTIFY YOUR BUILDING AS A DIGITAL TWIN TOKEN (DTT®)
         </p>
-
         <p class="h2">
           The Digital Twin Token is a unique digital asset backed by property
           data. Magma combines your building’s components and systems essential
           information into a DTT.
         </p>
       </div>
-      <div
-        id="page4"
-        class="w-100 h-100"
-        data-scroll-speed="-5"
-        class="w-100 h-100"
-      >
+      <div id="page4" class="w-100 h-100">
         <canvas></canvas>
       </div>
       <div id="page5" class="w-100 h-100">
@@ -99,7 +93,7 @@
           and boosting the liquidity of your building.
         </p>
       </div>
-      <div id="page8" class="w-100 h-100" data-scroll data-scroll-speed="-5">
+      <div id="page8" class="w-100 h-100">
         <div class="page-8-cir">
           <div class="page-8-circle-inner"></div>
         </div>
