--- a/index.html
+++ b/index.html
@@ -106,6 +106,55 @@
           loop
           muted
         ></video>
+        <div class="title-with-btn">
+          <h2>Magma DTT®</h2>
+          <a href="" class="btn">LAERN MORE</a>
+        </div>
+      </div>
+      <div id="page10" class="w-100 h-100">
+        <div class="container">
+          <div class="flex what-is-magma">
+            <div class="col-3">
+              <h2>What is Magma?</h2>
+            </div>
+            <div class="col-9">
+              <img src="home-1.jpeg" alt="home-1" />
+              <div class="magma-detail flex col">
+                <div>
+                  <h5>Web3 platform</h5>
+                  <p>
+                    Magma is a Web3 platform for all real estate stakeholders,
+                    which provides users with the ability to manage interactions
+                    between physical and digital assets through unique, and
+                    collectively generated, 3D representations of their
+                    buildings.
+                  </p>
+                </div>
+                <div>
+                  <h5>
+                    The Digital Twin Token: The building’s unique digital copy
+                  </h5>
+                  <p>
+                    Magma uses blockchain technology to record essential data,
+                    which enables transparent, traceable, and immutable streams
+                    of information to be readily accessible to its users. Magma
+                    smart contracts are built with this blockchain data to
+                    expedite tasks like requests for proposals, lease
+                    agreements, and services arrangements.
+                  </p>
+                </div>
+                <div>
+                  <h5>An Index of digitization</h5>
+                  <p>
+                    The Magma Index provides valuable insight for
+                    decision-making regarding data-sharing, service-creating,
+                    and operational/environmental expectations.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
