--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <a href="" class="btn">LAERN MORE</a>
         </div>
       </div>
-      <div id="page10" class="w-100 h-100">
+      <div id="page10">
         <div class="container">
           <div class="flex what-is-magma">
             <div class="col-3">
@@ -153,6 +153,43 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+      <div id="page11">
+        <div class="container">
+          <div class="flex creation">
+            <div class="col-4">
+              <h2>DTT Creation</h2>
+              <div class="dtt-details flex col">
+                <div>
+                  <span>01</span>
+                  <h3>Invite your building’s Stakeholders</h3>
+                  <p>
+                    Stakeholders connect directly to the DTT® without any
+                    intermediaries.
+                  </p>
+                </div>
+                <div>
+                  <span>02</span>
+                  <h3>
+                    Upload and validate contractual and architectural data
+                  </h3>
+                  <p>Each contribution is rewarded in tokens.</p>
+                </div>
+                <div>
+                  <span>03</span>
+                  <h3>Mint your building’s Digital Twin Token</h3>
+                  <p>Increase its Magma Index.</p>
+                </div>
+                <div>
+                  <span>04</span>
+                  <h3>Your Digital Twin Token is up to date</h3>
+                  <p>Add liquidity to your asset.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-8"></div>
           </div>
         </div>
       </div>
