--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
       <div id="page10">
         <div class="container">
           <div class="flex what-is-magma">
-            <div class="col-3">
+            <div class="col-3 col-md-12">
               <h2>What is Magma?</h2>
             </div>
-            <div class="col-9">
+            <div class="col-9 col-md-12">
               <img src="home-1.jpeg" alt="home-1" />
               <div class="magma-detail flex col">
                 <div>
@@ -160,7 +160,7 @@
         <div class="container">
           <h2>DTT Creation</h2>
           <div class="flex creation">
-            <div class="col-4">
+            <div class="col-4 col-md-6">
               <div class="dtt-details flex col">
                 <div>
                   <span>01</span>
@@ -170,33 +170,16 @@
                     intermediaries.
                   </p>
                 </div>
-                <!-- <div>
-                  <span>02</span>
-                  <h3>
-                    Upload and validate contractual and architectural data
-                  </h3>
-                  <p>Each contribution is rewarded in tokens.</p>
-                </div>
-                <div>
-                  <span>03</span>
-                  <h3>Mint your building’s Digital Twin Token</h3>
-                  <p>Increase its Magma Index.</p>
-                </div>
-                <div>
-                  <span>04</span>
-                  <h3>Your Digital Twin Token is up to date</h3>
-                  <p>Add liquidity to your asset.</p>
-                </div> -->
               </div>
             </div>
-            <div class="col-8">
+            <div class="col-8 col-md-6">
               <div class="right-img">
                 <img src="./screenshots/screenshot_15.png" alt="right-img" />
               </div>
             </div>
           </div>
           <div class="flex creation">
-            <div class="col-4">
+            <div class="col-4 col-md-6">
               <div class="dtt-details flex col">
                 <div>
                   <span>02</span>
@@ -205,47 +188,32 @@
                   </h3>
                   <p>Each contribution is rewarded in tokens.</p>
                 </div>
-                <!--<div>
-                  <span>03</span>
-                  <h3>Mint your building’s Digital Twin Token</h3>
-                  <p>Increase its Magma Index.</p>
-                </div>
-                <div>
-                  <span>04</span>
-                  <h3>Your Digital Twin Token is up to date</h3>
-                  <p>Add liquidity to your asset.</p>
-                </div> -->
               </div>
             </div>
-            <div class="col-8">
+            <div class="col-8 col-md-6">
               <div class="right-img">
                 <img src="./screenshots/screenshot_27.png" alt="right-img" />
               </div>
             </div>
           </div>
           <div class="flex creation">
-            <div class="col-4">
+            <div class="col-4 col-md-6">
               <div class="dtt-details flex col">
                 <div>
                   <span>03</span>
                   <h3>Mint your building’s Digital Twin Token</h3>
                   <p>Increase its Magma Index.</p>
                 </div>
-                <!--<div>
-                  <span>04</span>
-                  <h3>Your Digital Twin Token is up to date</h3>
-                  <p>Add liquidity to your asset.</p>
-                </div> -->
               </div>
             </div>
-            <div class="col-8">
+            <div class="col-8 col-md-6">
               <div class="right-img">
                 <img src="./screenshots/screenshot_31.png" alt="right-img" />
               </div>
             </div>
           </div>
           <div class="flex creation">
-            <div class="col-4">
+            <div class="col-4 col-md-6">
               <div class="dtt-details flex col">
                 <div>
                   <span>04</span>
@@ -254,7 +222,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-8">
+            <div class="col-8 col-md-6">
               <div class="right-img">
                 <img src="./screenshots/screenshot_36.png" alt="right-img" />
               </div>
